infra/k8s/manifest/api.yaml
# 1. The Switchboard (Service)
apiVersion: v1
kind: Service
metadata:
  name: monolith-api
spec:
  type: ClusterIP
  selector:
    app: monolith-api
    color: green
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
# 2. The LIVE Environment (Blue)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-api-blue
spec:
  selector:
    matchLabels:
      app: monolith-api
      color: blue
  template:
    metadata:
      labels:
        app: monolith-api
        color: blue
    spec:
      terminationGracePeriodSeconds: 40
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: monolith-api
          image: ghcr.io/bigorno12/monolith-architecture:main-8ace1ec
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "2.0"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "sleep 10"
---
# 3. The IDLE Environment (Green)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monolith-api-green
spec:
  selector:
    matchLabels:
      app: monolith-api
      color: green
  template:
    metadata:
      labels:
        app: monolith-api
        color: green
    spec:
      terminationGracePeriodSeconds: 40
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: monolith-api
          image: ghcr.io/bigorno12/monolith-architecture:main-8ace1ec
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "2.0"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 45
            periodSeconds: 10
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
          lifecycle:
            preStop:
              exec:
                command:
                  - "sh"
                  - "-c"
                  - "sleep 10"
