infra/k8s/manifest/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
    app: keycloak
  ports:
    - port: 7080
      targetPort: 7080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.6.4
          args: ["start-dev", "--http-port", "7080", "--import-realm"]
          ports:
            - containerPort: 7080
          volumeMounts:
            - name: keycloak-import-vol
              mountPath: /opt/keycloak/data/import/

          resources:
            limits:
              memory: "2Gi"
              cpu: "4.0"
          livenessProbe:
            exec:
              command:
                - "sh"
                - "-c"
                - '[ -f /tmp/HealthCheck.java ] || echo "public class HealthCheck { public static void main(String[] args) throws java.lang.Throwable { System.exit(java.net.HttpURLConnection.HTTP_OK == ((java.net.HttpURLConnection)new java.net.URL(args[0]).openConnection()).getResponseCode() ? 0 : 1); } }" > /tmp/HealthCheck.java && java /tmp/HealthCheck.java http://localhost:7080/health/live'
            initialDelaySeconds: 30
            periodSeconds: 15
            failureThreshold: 10
            timeoutSeconds: 5
          readinessProbe:
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 5

      volumes:
        - name: keycloak-import-vol
          configMap:
            name: keycloak-realm
