infra/k8s/manifest/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: monolith-gateway
  namespace: default
spec:
  gatewayClassName: kgateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same

---

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monolith-route
  namespace: default
spec:
  parentRefs:
    - name: monolith-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /auth
      backendRefs:
        - name: keycloak
          port: 7080

    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: monolith-api
          port: 8080
